html-openshift-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: html-openshift-app
  labels:
    app: html-openshift-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: html-openshift-app
  template:
    metadata:
      labels:
        app: html-openshift-app
    spec:
      containers:
        - name: html-openshift-app
          image: ghcr.io/lukavukadin/html-openshift-app:v2
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
