html-openshift-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: html-openshift-app
  labels:
    app: html-openshift-app
spec:
  selector:
    app: html-openshift-app
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
